Adaptación a GitHub Pages, evitar uso de EC2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="app-container">
+        <!-- Ruta de salud para nginx -->
+        <link rel="healthcheck" href="/health">
+        <!-- Eliminado: Ruta de salud para nginx, no necesaria en GitHub Pages -->
         <!-- Sidebar -->
         <nav class="sidebar" id="sidebar">
             <div class="sidebar-header">
