--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+    <!-- Botón flotante para subir al header -->
+    <button id="scrollToTopBtn" class="scroll-to-top" title="Subir al inicio">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -73,6 +77,9 @@
         <main class="main-content">
             <header class="content-header">
                 <button class="mobile-menu-toggle" id="mobileMenuToggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <button class="sidebar-open-toggle" id="sidebarOpenToggle" style="display:none">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="breadcrumb" id="breadcrumb">
